[gd_scene load_steps=2 format=3 uid="uid://ckv21tnofnccx"]

[ext_resource type="Script" path="res://Menus/multiplayer_menu.gd" id="1_o00nf"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o00nf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="Browse" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Join(temp)"

[node name="Back" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="SteamHUD" type="Control" parent="."]
anchors_preset = 0
offset_left = 90.0
offset_right = 130.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="SteamHUD"]
layout_mode = 0
offset_right = 118.0
offset_bottom = 288.0

[node name="VBoxContainer2" type="VBoxContainer" parent="SteamHUD/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SteamHUD/Panel/VBoxContainer2"]
layout_mode = 2

[node name="HostSteam" type="Button" parent="SteamHUD/Panel/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Host Steam"

[node name="ListLobbies" type="Button" parent="SteamHUD/Panel/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "List Lobbies"

[node name="ScrollContainer" type="ScrollContainer" parent="SteamHUD/Panel/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbyContainer" type="VBoxContainer" parent="SteamHUD/Panel/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Browse" to="." method="_on_browse_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SteamHUD/Panel/VBoxContainer2/VBoxContainer/HostSteam" to="." method="_on_host_steam_pressed"]
[connection signal="pressed" from="SteamHUD/Panel/VBoxContainer2/VBoxContainer/ListLobbies" to="." method="_on_list_lobbies_pressed"]
